--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "polished": "^4.2.2",
     "react-icons": "^4.8.0",
     "styled-components": "^6.0.0-rc.1",
-    "@emailjs/browser": "^3.11.0"
+    "@emailjs/browser": "^3.11.0",
+    "react-countup": "^6.3.0",
+    "framer-motion": "^6.3.15"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
