--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "@react-google-maps/api": "^2.18.1",
+    "framer-motion": "^6.3.15",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
+    "react-countup": "^6.3.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.7",
-    "polished": "^4.2.2",
-    "react-icons": "^4.8.0",
     "styled-components": "^6.0.0-rc.1",
-    "@emailjs/browser": "^3.11.0",
-    "react-countup": "^6.3.0",
-    "framer-motion": "^6.3.15"
+    "react-modal": "^3.16.1",
+    "react-image-gallery": "^1.2.11"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
